histogram & probability handler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ set(LIBRARY_NAME ${PROJECT_NAME})
 
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
+find_package(PCL REQUIRED)
+
+include(Findrapidjson)
+if(NOT RAPIDJSON_FOUND)
+  message(STATUS "rapidjson not found")
+  return()
+endif()
 
 add_subdirectory(src)
 
@@ -16,3 +23,7 @@ if(BUILD_TEST)
   enable_testing()
   add_subdirectory(tests)
 endif()
+
+if(BUILD_APPS)
+  add_subdirectory(examples)
+endif(BUILD_APPS)
