--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(sensors_calib)
-set (CMAKE_CXX_STANDARD 14)
+set (CMAKE_CXX_STANDARD 17)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
@@ -16,6 +16,10 @@ if(NOT RAPIDJSON_FOUND)
   message(STATUS "rapidjson not found")
   return()
 endif()
+
+add_compile_options(
+  "$<$<CONFIG:DEBUG>:-DDEBUG>"
+)
 
 add_subdirectory(src)
 
